[Fix] Fenster z-index

--- a/styles/eingabe.less
+++ b/styles/eingabe.less
@@ -225,6 +225,7 @@
 }
 
   .dshSeiteH .dshUiSpamschutzEingabe {
+    width: 100%;
     margin-top: 10px;
   }
 
