--- a/styles/reiter.less
+++ b/styles/reiter.less
@@ -5,6 +5,12 @@
   margin-bottom: 10px;
 }
 
+  .dshUiReiterKoepfe {
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
   .dshUiReiterKoepfe .dshUiReiterKopfInaktiv,
   .dshUiReiterKoepfe .dshUiReiterKopfAktiv {
     padding: 5px 10px;
