--- a/styles/tabelle.less
+++ b/styles/tabelle.less
@@ -134,7 +134,7 @@
   font-size: 90%;
 }
 
-.dshSeiteH .dshUiTabelleFormular td {
+.dshSeiteH .dshUiTabelleFormular tr:not(.dshUiTabelleFormularKnoepfe) td {
   padding-top: 24px;
 }
 
